--- a/LearningCorrelations/LearningCorrelations.csproj
+++ b/LearningCorrelations/LearningCorrelations.csproj
@@ -612,7 +612,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Graph.cs" />
+    <Compile Include="Assets\Scripts\Graph.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Packages\com.unity.2d.sprite\Editor\UI\SpriteEditor\PolygonChangeShapeWindow.uxml" />
