--- a/LearningCorrelations/LearningCorrelations.csproj
+++ b/LearningCorrelations/LearningCorrelations.csproj
@@ -612,6 +612,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\GameplayManager.cs" />
     <Compile Include="Assets\Scripts\Graph.cs" />
   </ItemGroup>
   <ItemGroup>
