--- a/LearningCorrelations/LearningCorrelations.csproj
+++ b/LearningCorrelations/LearningCorrelations.csproj
@@ -614,6 +614,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\GameplayManager.cs" />
     <Compile Include="Assets\Scripts\Graph.cs" />
+    <Compile Include="Assets\Scripts\nextGraph.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Packages\com.unity.2d.sprite\Editor\UI\SpriteEditor\PolygonChangeShapeWindow.uxml" />
